Substitute deprecated MySQL option --myisam-recover

Deprecated MySQL option --myisam-recover has been removed in MySQL 5.7,
replacement is --myisam-recover-options.

Use MYSQL_VERSION_ID to handle this.

Signed-off-by: Terje Rosten <terje.rosten@oracle.com>
Signed-off-by: Stefano Pettini <stefano.pettini@gmail.com>

CCMAIL: Terje Rosten <terje.rosten@oracle.com>
BUG: 354255
REVIEW: 128157
FIXED-IN: 2.9